--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch A Sketch</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    
+    <div class="page_title">
+        <h1>Etch-A-Sketch</h1>
+    </div>
+    <div id="container">
+
+    </div>
+    <script type="text/javascript">createSquares();</script>
 </body>
 </html>
