Centered table and adjusted width and height

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <div class="page_title">
         <h1>Etch-A-Sketch</h1>
     </div>
-    <div id="container">
+    <div class="board">
+        <div id="container">
 
+        </div>
     </div>
-    <script type="text/javascript">createSquares();</script>
+    
+    <script type="text/javascript">
+    createSquares();
+    </script>
 </body>
 </html>
